WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170187
WebAssembly: fix misc JS API implementation inconsistencies
https://bugs.webkit.org/show_bug.cgi?id=170187
Summary
WebAssembly: fix misc JS API implementation inconsistencies
JF Bastien
Reported
2017-03-28 11:02:33 PDT
Saam pointed out that I was using a weird pattern for exception return in
bug #166982
and I went on a inconsistency-busting tour.
Attachments
patch
(27.11 KB, patch)
2017-03-28 11:07 PDT
,
JF Bastien
no flags
Details
Formatted Diff
Diff
patch
(27.11 KB, patch)
2017-03-28 12:43 PDT
,
JF Bastien
no flags
Details
Formatted Diff
Diff
patch
(36.92 KB, patch)
2017-03-29 21:33 PDT
,
JF Bastien
keith_miller
: review+
keith_miller
: commit-queue-
Details
Formatted Diff
Diff
patch
(39.43 KB, patch)
2017-03-29 23:34 PDT
,
JF Bastien
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
JF Bastien
Comment 1
2017-03-28 11:07:34 PDT
Created
attachment 305606
[details]
patch
Keith Miller
Comment 2
2017-03-28 11:11:51 PDT
It would be great if we could hold off on this for a few hours until
https://bugs.webkit.org/show_bug.cgi?id=169187
lands.
JF Bastien
Comment 3
2017-03-28 11:14:45 PDT
(In reply to Keith Miller from
comment #2
)
> It would be great if we could hold off on this for a few hours until >
https://bugs.webkit.org/show_bug.cgi?id=169187
lands.
Sure thing! It's way easier for me to rebase, I'm just moving a few things.
JF Bastien
Comment 4
2017-03-28 12:43:06 PDT
Created
attachment 305621
[details]
patch Missing JSC inlines header.
JF Bastien
Comment 5
2017-03-29 21:33:23 PDT
Created
attachment 305831
[details]
patch Update after Keith's change.
Keith Miller
Comment 6
2017-03-29 21:39:03 PDT
Comment on
attachment 305831
[details]
patch r=me. Maybe it's worth making some tests though.
JF Bastien
Comment 7
2017-03-29 23:34:42 PDT
Created
attachment 305838
[details]
patch Add tests.
WebKit Commit Bot
Comment 8
2017-03-30 00:16:30 PDT
Comment on
attachment 305838
[details]
patch Clearing flags on attachment: 305838 Committed
r214601
: <
http://trac.webkit.org/changeset/214601
>
WebKit Commit Bot
Comment 9
2017-03-30 00:16:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug