JSTests/wasm/js-api/Module-compile.js
@@ -1,6 +1,10 @@
 import * as assert from '../assert.js';
 import Builder from '../Builder.js';
 
+assert.isFunction(WebAssembly.compile);
+assert.isFunction(WebAssembly.__proto__.compile);
+assert.eq(WebAssembly.compile.length, 1);
+
 async function testPromiseAPI() {
     {
         // Can't declare more than one memory.
