JSTests/wasm/js-api/validate.js
@@ -1,6 +1,10 @@
 import * as assert from '../assert.js';
 import Builder from '../Builder.js';
 
+assert.isFunction(WebAssembly.validate);
+assert.isFunction(WebAssembly.__proto__.validate);
+assert.eq(WebAssembly.validate.length, 1);
+
 {
     const builder = (new Builder())
         .Type().End()
