JSTests/wasm/js-api/web-assembly-instantiate.js
@@ -1,7 +1,8 @@
 import * as assert from '../assert.js';
 import Builder from '../Builder.js';
 
-assert.truthy(WebAssembly.instantiate instanceof Function);
+assert.isFunction(WebAssembly.instantiate);
+assert.isFunction(WebAssembly.__proto__.instantiate);
 assert.eq(WebAssembly.instantiate.length, 1);
 
 {
